After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 631053 - oss4sink: totem does not show correct volume on startup
oss4sink: totem does not show correct volume on startup
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other Solaris
: Normal normal
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-10-01 00:15 UTC by Brian Cameron
Modified: 2012-12-25 16:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch fixing issue. (555 bytes, patch)
2010-10-01 00:15 UTC, Brian Cameron
rejected Details | Review

Description Brian Cameron 2010-10-01 00:15:27 UTC
Created attachment 171460 [details] [review]
patch fixing issue.

On Solaris, when you start totem, the volume slider shows that the audio device is muted with volume set to 0.  On Solaris we use the OSSv4 plugin and the OSSv4 sink plugin uses the StreamVolume interface which is supported by totem.  However, this plugin does not trigger an notify::volume signal on startup which causes the volume to be left at -1, as set in the bacon_video_widget_init() 
function in the src/backend/bacon-video-widget-gst0.10.c file.

This simple patch fixes the bacon_video_widget_get_volume code to actually call the GStreamer plugin to get the volume level if the value is unset, and this fixes the problem.

Can this go upstream?
Comment 1 Bastien Nocera 2012-03-29 01:04:45 UTC
The OSS plugin should notify us of the current volume when the device gets opened instead.
Comment 2 Tim-Philipp Müller 2012-12-25 16:51:38 UTC
Untested:

commit 579678edf134001e84a07f8bd16c96411cca6a42
Author: Tim-Philipp Müller <tim@centricular.net>
Date:   Tue Dec 25 16:48:43 2012 +0000

    oss4sink: notify "volume" property on open to make apps query initial volume
    
    The initial volume might not be the property default, so
    emit a notify on the volume property to make apps get
    an up-to-date reading of the current volume.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=631053
Comment 3 Tim-Philipp Müller 2012-12-25 16:58:10 UTC
Sorry, it's commit 644c939fcb76650c82bef3d2778412baff7f6116