oss4sink: notify "volume" property on open to make apps query initial volume

The initial volume might not be the property default, so
emit a notify on the volume property to make apps get
an up-to-date reading of the current volume.

https://bugzilla.gnome.org/show_bug.cgi?id=631053